Draft of Logger with ElasticSearch (not working)